refactor: null-safety pass, drop social mobile field, typo suppressions